syntax = "proto3";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;

package com.devProblems;


message Product {
  int32 id = 1;
  string productCode = 2;
  string productTitle = 3;
  string imageUrl = 4;
  double discountOffer = 5;
  double price = 6;
  double currentPrice = 7;
}

message ProductRequest {
  int32 id = 1;
  string productCode = 2;
  string productTitle = 3;
  string imageUrl = 4;
  double discountOffer = 5;
  double price = 6;
}

message DbSequence {
  string id = 1;
  int32 seq = 2;
}

// Service Definition
service ProductService {
  rpc SaveProduct(ProductRequest) returns (Product) {}
  rpc GetAllProducts(Empty) returns (stream Product) {}
  rpc GetProductById(google.protobuf.Int32Value) returns (Product) {}
  rpc AddProductOffer(AddProductOfferRequest) returns (Product) {}
  rpc AddPrice(AddPriceRequest) returns (Product) {}
  rpc SaveOffer(Product) returns (Product) {}
}

message Empty {}

message AddProductOfferRequest {
  int32 productId = 1;
  double discountOffer = 2;
}

message AddPriceRequest {
  int32 id = 1;
  double price = 2;
}